[gd_scene load_steps=12 format=3 uid="uid://bml35r04d13im"]

[ext_resource type="Script" path="res://Scenes/Game/juego.gd" id="1_2s3yi"]
[ext_resource type="PackedScene" uid="uid://bq0ldblmm5yoi" path="res://Scenes/Prototypes/Characters/Jugador/jugador.tscn" id="1_kqs1c"]
[ext_resource type="Script" path="res://Scripts/Autoload/EventManager.gd" id="2_46sy2"]
[ext_resource type="Script" path="res://Scripts/Tools/sonido.gd" id="3_70jo2"]
[ext_resource type="PackedScene" uid="uid://dq0yysw54pvhm" path="res://Scenes/Game/spawner_burbujas.tscn" id="4_3rmtl"]
[ext_resource type="Script" path="res://Scripts/Tools/eventEmitterGameplay.gd" id="4_gc115"]
[ext_resource type="PackedScene" uid="uid://c5kx5enpe0ye" path="res://Scenes/Game/background.tscn" id="4_lhtt1"]
[ext_resource type="PackedScene" uid="uid://dwwunfueigju7" path="res://Scenes/Game/mundo.tscn" id="6_maha4"]
[ext_resource type="PackedScene" uid="uid://cita5dow20c4v" path="res://Scenes/MainMenu/menu_principal.tscn" id="6_o2qu6"]
[ext_resource type="PackedScene" uid="uid://biqmk2p8nm3sg" path="res://Scenes/UI/ui.tscn" id="7_66jwo"]
[ext_resource type="PackedScene" uid="uid://b6wp74ouwb47f" path="res://Scenes/Game/limites_del_juego.tscn" id="10_5a3fn"]

[node name="Juego" type="Node2D"]
script = ExtResource("1_2s3yi")

[node name="EventManager" type="Node" parent="."]
script = ExtResource("2_46sy2")

[node name="Sonido" type="FmodBankLoader" parent="."]
bank_paths = ["res://Assets/Audio/banks/Master.strings.bank", "res://Assets/Audio/banks/Master.bank", "res://Assets/Audio/banks/Music.bank", "res://Assets/Audio/banks/SFX.bank"]
script = ExtResource("3_70jo2")

[node name="Gameplay" type="FmodEventEmitter2D" parent="Sonido"]
event_name = "event:/Music/Gameplay"
event_guid = "{072130d3-a817-42b2-abca-fbe07c2e35d5}"
fmod_parameters/secciones/id = 7497399498551673388
fmod_parameters/secciones = "A"
fmod_parameters/secciones/labels = PackedStringArray("A", "B", "C", "D", "E")
fmod_parameters/secciones/variant_type = 4
script = ExtResource("4_gc115")

[node name="LimitesDelJuego" parent="." instance=ExtResource("10_5a3fn")]

[node name="Background" parent="." instance=ExtResource("4_lhtt1")]

[node name="SpawnerBurbujas" parent="." instance=ExtResource("4_3rmtl")]

[node name="SpawnerLaberintos" parent="." instance=ExtResource("6_maha4")]
position = Vector2(0, -800)

[node name="Jugador" parent="." instance=ExtResource("1_kqs1c")]
position = Vector2(628, 655)

[node name="Menu" parent="." instance=ExtResource("6_o2qu6")]

[node name="UI" parent="." instance=ExtResource("7_66jwo")]

[connection signal="cambiarSeccion" from="." to="Sonido/Gameplay" method="_on_juego_cambiar_seccion"]
[connection signal="GameOver" from="LimitesDelJuego" to="." method="_on_limites_del_juego_game_over"]
[connection signal="comenzarJuego" from="Menu" to="." method="_on_menu_comenzar_juego"]
[connection signal="terminoAnimacionInicioJuego" from="Menu" to="." method="_on_menu_termino_animacion_inicio_juego"]
[connection signal="seQuedoSinAire" from="UI" to="." method="_on_ui_se_quedo_sin_aire"]
